--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -116,6 +116,7 @@
   grid-template-rows: 1fr;
   font-size: 3vw;
   position: relative;
+  padding-top: 20px;
 }
 .portfolio .wave {
   position: absolute;
