--- a/src/components/course/course.module.css
+++ b/src/components/course/course.module.css
@@ -51,6 +51,25 @@ p {
   padding: 10px;
   gap: 10px;
 }
+.questions_panal .questions_indexs {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+.questions_indexs span {
+  border: 1px solid var(--primary-color);
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+  cursor: pointer;
+  box-shadow: #333 0 2px 2px;
+}
 .prev_attempt {
   display: flex;
   justify-content: center;
