--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,31 @@ img {
   margin: 0;
   --video-aspect-ratio: 2;
 }
+.section {
+  display: flex;
+  flex-direction: column;
+  box-shadow: #333 0 2px 2px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 10px 20px;
+  gap: 30px;
+  background-color: #fff;
+}
+.section .section_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: var(--primary-color) 1px solid;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 10px;
+}
+.section .section_content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 @keyframes show {
   0% {
     transform: translateX(-100%);
