--- a/src/components/course/course.module.css
+++ b/src/components/course/course.module.css
@@ -142,9 +142,16 @@ p {
   color: var(--text-color);
   position: relative;
 }
+.question img {
+  max-height: 200px;
+  max-width: fit-content;
+  aspect-ratio: auto;
+  margin: auto;
+}
 .length {
   position: absolute;
-  top: 0;
+  top: -5px;
+  transform: rotateZ(-20deg);
   left: 0;
   padding: 5px;
   border: 1px double #333;
