--- a/src/index.css
+++ b/src/index.css
@@ -61,14 +61,13 @@ img {
   padding: 0 15px;
   height: 50px;
   background-color: var(--secondary-color);
-  position: absolute;
-  top: 100px;
+  position: fixed;
+  top: 50px;
   left: 0;
   display: flex;
   animation: show 8s forwards ease-in-out;
   overflow: hidden;
   box-shadow: var(--shadow);
-  z-index: 999;
 }
 .toast .content {
   display: flex;
