--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -174,20 +174,21 @@
 .services {
   flex: 1;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   justify-content: space-between;
   align-items: center;
   height: 100%;
+  width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .services .cards {
-  flex: 1;
+  flex: 1 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  /* align-self: self-start; */
   align-items: center;
   gap: 50px;
 }
