--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -117,6 +117,7 @@
   font-size: 3vw;
   position: relative;
 }
+
 .portfolio .wave {
   position: absolute;
   bottom: -50px;
@@ -181,16 +182,6 @@
   height: 100%;
   width: 100%;
   position: relative;
-  overflow: hidden;
-}
-
-.services .cards {
-  flex: 1 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
-  gap: 50px;
 }
 .card {
   display: flex;
@@ -372,6 +363,7 @@ svg {
     display: flex;
     flex-direction: column;
     padding-bottom: 70px;
+    padding-top: 70px;
   }
   .services .cards {
     width: 100%;
