--- a/src/index.css
+++ b/src/index.css
@@ -204,12 +204,45 @@ img {
 }
 
 .swiper {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
+  width: 90vw !important;
+  align-items: center;
 }
 .swiper-pagination {
-  position: static;
+  position: static !important;
+  transform: translateX(-1px) scale(1.2) !important;
+  padding-bottom: 5px;
+}
+.autoplay-progress {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  z-index: 10;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: var(--swiper-theme-color);
+}
+
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 4px;
+  stroke: var(--swiper-theme-color);
+  fill: none;
+  stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
 }
 
 @keyframes show_section {
