--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -189,6 +189,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 5px;
+  /* background-color: var(--normal-color); */
 }
 .card img {
   width: 150px;
