--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -166,21 +166,16 @@
 
 .services {
   flex: 1;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  justify-content: space-between;
+  display: flex;
   align-items: center;
   height: 100%;
   width: 100%;
-  position: relative;
 }
 .card {
   display: flex;
   gap: 10px;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 5px;
 }
 .card img {
   width: 150px;
