--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -298,13 +298,12 @@ svg {
 
 .footer {
   background-color: #333;
-  width: 100vw;
-  position: absolute;
-  bottom: 0;
-  padding: 1px;
+  width: 100%;
+  padding: 5px 0;
   color: var(--normal-color);
   text-align: center;
   font-size: 12px;
+  text-decoration: underline;
 }
 
 @media (max-width: 450px) {
@@ -334,10 +333,13 @@ svg {
     padding-bottom: 0 !important;
   }
   .years {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     display: flex;
     flex-direction: column;
     gap: 50px;
+  }
+  .footer {
+    margin-top: 0;
   }
 }
 @media (max-width: 768px) {
@@ -355,6 +357,10 @@ svg {
   }
   .services .cards {
     width: 100%;
+  }
+  .footer {
+    position: static;
+    margin-top: 20px;
   }
 
   .years .middle_col {
