--- a/src/components/course/course.module.css
+++ b/src/components/course/course.module.css
@@ -14,6 +14,8 @@
   border-radius: 10px;
   width: 100%;
   border: 1px solid #000;
+  height: fit-content;
+  overflow: hidden;
 }
 .course .elements {
   display: flex;
@@ -166,6 +168,7 @@ p {
   display: flex;
   justify-content: space-evenly;
 }
+
 .inner textarea {
   padding: 10px 20px;
   box-sizing: border-box;
