--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -14,7 +14,7 @@
 }
 .scroll {
   position: absolute;
-  bottom: 50px;
+  bottom: 80px;
   right: 50%;
   margin-left: 50%;
   font-size: 20px;
@@ -61,50 +61,6 @@
   top: 0;
   opacity: 0.04;
   z-index: -1;
-}
-.home .inner {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin-top: 100px;
-  box-sizing: border-box;
-}
-.home .show_curr_pg {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  z-index: 99;
-}
-.show_curr_pg span {
-  width: 10px;
-  height: 10px;
-  border: 1px solid var(--secondary-color);
-  border-radius: 50%;
-  transition-duration: 0.3s;
-}
-.home .scroll_arrows {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  transform: translateY(-50%);
-  gap: 10px;
-  top: 50%;
-  left: 10px;
-  z-index: 99;
-}
-.scroll_arrows span {
-  transform: rotateZ(-45deg);
-  width: 20px;
-  height: 20px;
-  border-left: 5px solid var(--secondary-color);
-  border-bottom: 4px solid var(--secondary-color);
 }
 .portfolio {
   flex: 1;
@@ -165,122 +121,183 @@
 }
 
 .services {
-  flex: 1;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background-color: #eee;
+  border-radius: 20px;
+  width: 100vw !important;
   align-items: center;
-  height: 100%;
   width: 100%;
-}
-.card {
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 10px;
-}
-.card img {
-  width: 150px;
-  height: 150px;
-}
-.card p {
-  padding: 10px;
-  color: var(--normal-color);
-  font-family: "text_font";
-  font-size: 15px;
-  margin: 0;
-  background-color: #7250d8;
-  border-radius: 10px;
+  height: 100vh;
+  gap: 20px;
+  justify-items: center;
   position: relative;
 }
-.card p::before {
-  content: "";
+.upperwave {
   position: absolute;
-  bottom: -5px;
-  right: -5px;
-  background-color: var(--secondary-color);
+  top: 0;
+  left: 0;
+  width: 100%;
+  rotate: 180deg;
+}
+.lowerwave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.services svg,
+.portfolio svg {
   width: 100%;
   height: 100%;
+  background-color: transparent;
+}
+.services .text {
+  display: flex;
+  flex-direction: column;
+  min-width: 500px;
+  font-size: 1rem;
+  position: relative;
+}
+.services .text::after {
+  content: "";
+  position: absolute;
+  width: 20%;
+  height: 5px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--secondary-color);
+  border-radius: 50px;
+}
+.services .text .firstH1 {
+  position: relative;
+}
+.services .text .firstH1 span {
+  border-radius: 20px;
+  position: absolute;
+  top: -20px;
+  right: -50px;
+  width: 50%;
+  height: 50%;
+  z-index: 1;
+  overflow: hidden;
+}
+.services .text .firstH1 span::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: 0;
+  background-color: var(--secondary-color);
+}
+.services .text h1 {
+  position: relative;
+  z-index: 2;
+  color: #333;
+  font-size: 4em;
+}
+.services .text h2 {
+  position: relative;
+  color: var(--primary-color);
+  font-size: 2em;
+  margin: 0;
+}
+.services .text h1::before {
+  content: "";
+  position: absolute;
   z-index: -1;
-  border-radius: 10px;
-  opacity: 0.7;
-  transition-duration: 0.3s;
+  top: -40%;
+  right: -20px;
+  width: 100%;
+  height: 70%;
+  border-radius: 20px;
 }
-.card p:hover::before {
-  opacity: 1;
-  background-color: #7250d8;
-}
-.card p:hover {
-  background-color: #ef148c;
-}
+
 /* ////////////////// */
 .years {
   position: relative;
   font-family: "text_font";
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: column;
   justify-items: center;
   align-items: center;
   flex: 1;
   width: 100%;
+  height: 100vh;
+  padding: 50px 0;
+  gap: 50px;
 }
-.middle_col {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-evenly;
+.years .row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 50px;
+  width: 100%;
 }
-.item {
-  background-color: #005483;
-  opacity: 0.9;
-  padding: 15px 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+.normalitem,
+.special_item {
   border-radius: 10px;
-  gap: 10px;
-  height: 120px;
-  width: 150px;
+  aspect-ratio: 2/1.3;
+  width: 100%;
   transition-duration: 0.3s;
   box-shadow: var(--shadow);
-  border: 1px dotted var(--text-color);
-  text-align: center;
-}
-svg {
-  fill: var(--primary-color);
-  width: 80px;
-  height: 80px;
-}
-.item svg {
-  fill: var(--normal-color);
-  width: 50px;
-  height: 50px;
-  scale: 1.3;
-}
-.item p {
-  margin: 0;
-}
-.item:hover {
-  scale: 1.05;
-}
-.item a,
-.item p {
-  font-size: 20px;
-  font-weight: 700;
-  color: var(--normal-color);
-  text-decoration: underline;
-}
-.item a:hover {
-  color: var(--text-color);
-}
-#special_item {
   overflow: hidden;
+  position: relative;
+}
+.special_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  max-width: 300px;
   transition-duration: 1s;
   z-index: 1;
+  padding: 10px 0;
+  border: 1px solid var(--secondary-color);
+  box-shadow: none;
+}
+.normalitem img {
+  transition-duration: 0.3s;
+  filter: grayscale(0.7);
 }
 
-.item img {
+.normalitem a {
+  position: absolute;
+  text-align: center;
+  margin: 0;
+  top: 50%;
+  right: 50%;
+  translate: 50% -50%;
+  font-size: 4em;
+  line-height: 1em;
+  color: var(--secondary-color);
+  font-weight: bold;
+}
+.normalitem:hover {
+  scale: 1.05;
+}
+.normalitem img {
+  width: 100%;
+  height: 100%;
+}
+.normalitem:hover img {
+  scale: 1.1;
+  filter: grayscale(0);
+}
+
+.normalitem a:hover {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
+.special_item svg {
+  width: 150px;
+  height: 150px;
+  fill: var(--secondary-color);
+  transition-duration: 1s;
+}
+.special_item img {
   position: absolute;
   width: 90%;
   height: 200px;
@@ -288,10 +305,17 @@ svg {
   visibility: hidden;
   transition-duration: 1s;
 }
-#special_item:hover {
-  height: 310px;
+.special_item:hover {
+  height: 380px;
+  border: 1px solid var(--primary-color);
 }
-#special_item:hover img {
+.special_item:hover svg {
+  translate: 0 -100px;
+  fill: var(--primary-color);
+  width: 100px;
+  height: 100px;
+}
+.special_item:hover img {
   bottom: 20px;
   visibility: visible;
 }
@@ -299,11 +323,16 @@ svg {
 .footer {
   background-color: #333;
   width: 100%;
+  height: 20px;
   padding: 5px 0;
   color: var(--normal-color);
   text-align: center;
   font-size: 12px;
   text-decoration: underline;
+}
+.footer a {
+  text-decoration: none;
+  color: #eee;
 }
 
 @media (max-width: 450px) {
@@ -321,22 +350,34 @@ svg {
     display: flex;
     flex-direction: column;
     margin-bottom: 100px;
+    padding: 50px 0;
+    padding-bottom: 100px;
+    height: fit-content;
   }
-  .services .cards {
-    gap: 50px;
-    grid-template-columns: 1fr;
+  .services .text {
+    font-size: 0.6rem;
+    margin: auto;
+    min-width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    justify-content: center;
+  }
+  .services .text #secondh1 {
+    margin-right: 2.8em !important;
+  }
+
+  .years .row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .years .row div {
+    width: 100%;
   }
   .edge {
     height: 100px;
-  }
-  .services {
-    padding-bottom: 0 !important;
-  }
-  .years {
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
   }
   .footer {
     margin-top: 0;
@@ -351,9 +392,7 @@ svg {
     padding-bottom: 70px;
   }
   .services {
-    display: flex;
     flex-direction: column;
-    padding-bottom: 70px;
   }
   .services .cards {
     width: 100%;
