--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
 }
 .container {
   display: flex;
+  height: 100%;
   justify-content: center;
   align-items: center;
   width: 95vw;
@@ -202,18 +203,71 @@ img {
   width: 100%;
   border: 1px solid var(--primary-color);
 }
+.job-title {
+  padding: 0 10px 0 0;
+}
+.job-box {
+  color: var(--main-color);
+  position: relative;
+  padding: 0 10px;
+  width: fit-content;
+}
+.job-box .overlay {
+  position: absolute;
+  top: 0;
+  right: 99%;
+  width: 100%;
+  height: 100%;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  background-color: #eee;
+}
+.job-box .overlay::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #333;
+  width: 2px;
+  height: 100%;
+  animation: opacity 0.8s infinite alternate linear;
+}
+
+@keyframes to-left {
+  0% {
+    right: 0;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes to-right {
+  from {
+    left: 0;
+  }
+  to {
+    right: 0;
+  }
+}
+@keyframes opacity {
+  to {
+    opacity: 0;
+  }
+}
 
 .swiper {
   display: flex !important;
   flex-direction: column;
   gap: 20px;
-  width: 90vw !important;
+  width: 300px;
   align-items: center;
   background-color: #fff;
   border-radius: 20px;
   padding: 40px 50px !important;
   box-sizing: border-box;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+  box-sizing: border-box;
 }
 .swiper-pagination {
   position: static !important;
