--- a/src/components/user/courses/coursesPanal.module.css
+++ b/src/components/user/courses/coursesPanal.module.css
@@ -2,14 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   gap: 10px;
   width: 100%;
 }
 .courses .course {
   border-radius: 10px;
   aspect-ratio: 2/1.3;
-  width: 100%;
+  width: 300px;
   transition-duration: 0.3s;
   box-shadow: var(--shadow);
   overflow: hidden;
