--- a/src/components/course/course.module.css
+++ b/src/components/course/course.module.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
 }
 .course .inner {
+  padding-top: 20px;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
@@ -10,7 +11,8 @@
   padding-bottom: 50px;
 }
 .course .active_panal {
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 3px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 5px;
+
   border-radius: 10px;
   overflow: hidden;
   display: flex;
@@ -27,11 +29,9 @@
 }
 
 .elements .element {
-  border-bottom: 5px solid var(--primary-color);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 5px;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px 10px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -42,6 +42,9 @@ p {
 }
 .element .text {
   color: var(--text-color);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 900;
 }
 .elements .element span {
   font-size: 12px;
