--- a/src/index.css
+++ b/src/index.css
@@ -108,9 +108,9 @@ img {
 .section {
   display: flex;
   flex-direction: column;
-  box-shadow: #333 0 2px 2px;
-  border-radius: 20px;
-  padding: 10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 5px;
+  border-radius: 10px;
+  padding: 20px;
   gap: 30px;
   background-color: #fff;
 }
@@ -119,9 +119,8 @@ img {
   justify-content: center;
   align-items: center;
   border: var(--primary-color) 1px solid;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
   padding: 10px;
+  border-radius: 10px;
 }
 .section .section_content {
   width: 100%;
